--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <title>Collision GJK EPA</title>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="http://www.babylonjs.com/babylon.js"></script>
+    <script src="https://www.babylonjs.com/babylon.js"></script>
     <script src="./build/collision-gjk-epa.js"></script>
     <style>
         html, body {
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <a href="https://github.com/clementlevasseur"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
+    <a href="https://github.com/wanadev/collision-gjk-epa"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
     <div class="btn-group buttons" data-toggle="buttons">
       <button id="2D" type="button" class="btn btn-secondary">2D</button>
       <button id="3D" type="button" class="btn btn-secondary">3D</button>
