Update babylonjs file for demo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Collision GJK EPA</title>
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://www.babylonjs.com/babylon.js"></script>
+    <script src="www.babylonjs.com/babylon.js"></script>
     <script src="./build/collision-gjk-epa.js"></script>
     <style>
         html, body {
